# DynamicReactComponent

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
frontend/my-app/: package-lock.json  package.json  vite.config.js
frontend/my-app/src/: App.css  App.jsx  index.css
frontend/my-app/src/assets/: ClothingCard.css  ClothingCard.jsx  ClothingCarousel.css  ClothingCarousel.jsx
frontend/my-app/src/components/: CLOTHING_RENDERER_EXAMPLE.md  ClothingCard.css  ClothingCard.jsx  ClothingRenderer.css  ClothingRenderer.jsx
mcp/: crawl4ai_server.py
src/: main.py
src/dtos/: requests.py  responses.py
src/graph/: agent.py  prompts.py  states.py  tools.py
src/graph/MCPmodule/: client.py  servers.py
src/routers/: invokes.py
src/services/: invoke_service.py
src/skills/aboutyou/: SKILL.md
src/utils/: llm.py  message_mapper.py  middlewares.py  settings.py
