[project]
name = "dynamicreactcomponent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.8.6",
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "mcp>=1.27.1",
    "tavily>=1.1.0",
]

[tool.fastapi]
entrypoint = "backend.main:app"
